--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,10 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+def retrofit_version = "2.4.0"
 def dagger_version = "2.16"
+def lifecycle_version = "1.1.0"
+def support_version = "27.1.1"
 
 android {
     signingConfigs {
@@ -56,8 +59,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 27
         multiDexEnabled true
-        versionCode 40
-        versionName "4.4.4"
+        versionCode 41
+        versionName "4.4.5"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
         testInstrumentationRunner = 'android.support.test.runner.AndroidJUnitRunner'
@@ -98,14 +101,14 @@ android {
 }
 
 dependencies {
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit_version}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit_version}"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.google.guava:guava:25.0-android'
+    implementation 'com.google.guava:guava:25.1-android'
     implementation "com.google.dagger:dagger:${dagger_version}"
     implementation "com.google.dagger:dagger-android:${dagger_version}"
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
@@ -113,28 +116,28 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
     kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
-    implementation 'android.arch.persistence.room:runtime:1.1.0'
-    implementation 'android.arch.persistence.room:rxjava2:1.1.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
-    kapt "android.arch.persistence.room:compiler:1.1.0"
-    implementation 'android.arch.lifecycle:common-java8:1.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:preference-v7:27.1.1'
+    implementation "android.arch.persistence.room:runtime:${lifecycle_version}"
+    implementation "android.arch.persistence.room:rxjava2:${lifecycle_version}"
+    annotationProcessor "android.arch.persistence.room:compiler:${lifecycle_version}"
+    kapt "android.arch.persistence.room:compiler:${lifecycle_version}"
+    implementation "android.arch.lifecycle:common-java8:${lifecycle_version}"
+    implementation "com.android.support:design:${support_version}"
+    implementation "com.android.support:cardview-v7:${support_version}"
+    implementation "com.android.support:preference-v7:${support_version}"
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.2'
-    implementation 'com.google.firebase:firebase-core:15.0.2'
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
-    implementation 'com.google.firebase:firebase-database:15.0.1'
-    implementation 'com.firebaseui:firebase-ui-database:3.3.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:4.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1', {
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
     }
-    androidTestImplementation 'android.arch.persistence.room:testing:1.1.0'
+    androidTestImplementation "android.arch.persistence.room:testing:${lifecycle_version}"
 }
 
 apply plugin: 'com.google.gms.google-services'
