--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,17 +128,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.3'
     implementation 'com.firebaseui:firebase-ui-database:4.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0-alpha4'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
     }
     androidTestImplementation "androidx.room:room-testing:${lifecycle_version}"
-    androidTestImplementation 'androidx.test:rules:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
 }
 
 apply plugin: 'com.google.gms.google-services'
