--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         multiDexEnabled true
-        versionCode 45
-        versionName "4.4.9"
+        versionCode 46
+        versionName "4.4.10"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
         testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
@@ -105,7 +105,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit_version}"
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.greenrobot:eventbus:3.1.1'
     api 'com.google.guava:guava:26.0-android'
@@ -125,20 +125,20 @@ dependencies {
     implementation "androidx.cardview:cardview:${support_version}"
     implementation "androidx.preference:preference:${support_version}"
     implementation 'androidx.multidex:multidex:2.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
-    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.firebaseui:firebase-ui-database:4.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4', {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
     }
     androidTestImplementation "androidx.room:room-testing:${lifecycle_version}"
-    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
