--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-def retrofit_version = "2.4.0"
-def dagger_version = "2.16"
+def retrofit_version = "2.5.0"
+def dagger_version = "2.19"
 def lifecycle_version = '2.0.0'
 def support_version = '1.0.0'
 
@@ -105,10 +105,10 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit_version}"
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.greenrobot:eventbus:3.1.1'
-    api 'com.google.guava:guava:26.0-android'
+    api 'com.google.guava:guava:27.0.1-android'
     implementation "com.google.dagger:dagger:${dagger_version}"
     implementation "com.google.dagger:dagger-android:${dagger_version}"
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
@@ -126,10 +126,11 @@ dependencies {
     implementation "androidx.preference:preference:${support_version}"
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.firebaseui:firebase-ui-database:4.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
